--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Resolve issues instantly, increase team efficiency, and make customers happier w
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-sm-8 col-xs-9">
-				<p>Copyright © 2084 Blaster Studio | Design: <a rel="nofollow" href="http://www.templatemo.com" target="_parent">templatemo</a></p>
+				<p>Copyright © 2020 - 2023 Pixel Crate LLC</p>
 			</div>
 			<div class="col-md-4 col-sm-4 col-xs-3">
 				<a href="#home" class="smoothScroll fa fa-angle-up"></a>
