--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 Blaster Template
 
-http://www.templatemo.com/tm-472-blaster
+http://www.templatemo.com/tm-472-blaster 
 
 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -41,8 +41,7 @@ http://www.templatemo.com/tm-472-blaster
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#home" class="smoothScroll">HOME</a></li>
 				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-				<li><a href="#portfolio" class="smoothScroll">PORTFOLIO</a></li>
-				<li><a href="#team" class="smoothScroll">TEAM</a></li>
+				<li><a href="#services" class="smoothScroll">SERVICES</a></li>
 				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
 		</div>
@@ -55,9 +54,10 @@ http://www.templatemo.com/tm-472-blaster
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<hr>
-				<h3><span class="bold">WE ARE a DIGITAL STUDIO</h3>
-				<h1 class="heading">from California</h1>
-				<a href="#about" class="smoothScroll btn btn-default">Our Process</a>
+				<h3><span class="bold">Boost Your Business Success with 
+</h3>
+				<h1 class="heading">AI Automation</h1>
+				<a href="#services" class="smoothScroll btn btn-default">Services</a>
 			</div>
 		</div>
 	</div>		
@@ -69,198 +69,79 @@ http://www.templatemo.com/tm-472-blaster
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
 				<h1 class="heading bold">ABOUT US</h1>
-				<h2 class="subheading">WE ARE TALANTED DESIGNERS &amp; DEVELOPERS</h2>
+				<h2 class="subheading">EXPLORE AND NAVIGATE YOUR WAY TO SUCCESS WITH US!</h2>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<i class="fa fa-comments-o"></i>
-					<h3>Your customers deserve a better AI chatbot
-</h3>
-					<p>
-Resolve issues instantly, increase team efficiency, and make customers happier with AI-powered chatbots and automations.
-</p>
+				<i class=""></i>
+					<p>Welcome to our platform, your comprehensive AI development partner. We're more than machine learning experts – we assist startups and enterprises in creating AI products that <span class="und">boost efficiency</span>  and growth. 		
+					Guiding you every step of the way, we transform your ideas into practical solutions. We offer optimum growth AI services.</p>
+			</div>			
+
+		</div>
+	</div>
+</section>
+
+<!-- about section -->
+<section id="services">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 col-sm-12 text-center">
+				<h1 class="heading bold">SERVICES</h1>
+				<h2 class="subheading">cos tam asdasda </h2>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+				<i class=""></i>
+					<h3>Your customers deserve a better AI chatbot</h3>
+					<p>Resolve issues instantly, increase team efficiency, and make customers happier with AI-powered chatbots and automations.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
-				<i class="fa fa-percent "></i>
+				<i class=""></i>
 					<h3>Resolve 50% of your support questions. Instantly.</h3>
-					<p>Meet Fin, our breakthrough AI chatbot. Using the most sophisticated AI language models, Fin automatically solves customer issues with safe, accurate, conversational answers based solely on your support content.
-</p>
+					<p>Meet Fin, our breakthrough AI chatbot. Using the most sophisticated AI language models, Fin automatically solves customer issues with safe, accurate, conversational answers based solely on your support content.</p>
 			</div>
+			
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="fa fa-percentage"></i>
+				<i class=""></i>
 					<h3>Dramatically reduce your support volume</h3>
 					<p>Fin can resolve over 50% of your customer questions instantly and accurately, so your team can focus on more high-value conversations.</p>
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="fa fa-percentage"></i>
+				<i class=""></i>
 					<h3>An AI chatbot you can trust</h3>
 					<p>Built-in safeguards ensure Fin answers questions based solely on your support content, and Fin conversations in inbox lets your team monitor all of Fin's responses.</p>
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="fa fa-percentage"></i>
+				<i class=""></i>
 					<h3>Activate in minutes</h3>
 					<p>Just point it at your content—whether it’s Intercom Articles, Zendesk Help Center, or any public URL—and turn it on. No training, no configuration, no new bot paths.</p>
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="fa fa-percentage"></i>
+				<i class=""></i>
 					<h3>Control when you want it, human when you need it</h3>
 					<p>Enrich Fin with Custom Answers for important questions. For everything else, Fin seamlessly passes conversations to your support team.</p>
 			</div>
 			
 	
-			
+
 			<hr>
-			<div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-				<img src="images/about-img.png" class="img-responsive" alt="about img">
-			</div>
-			<div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.9s">
-				<h3>Our Focus</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-				<span><i class="fa fa-mobile"></i> Mobile Apps</span>
-					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-					</div>
-				<span><i class="fa fa-link"></i> Web Development</span>
-					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-					</div>
-				<span><i class="fa fa-cloud"></i> Cloud Computing</span>
-					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
-					</div>
-			</div>
+
 		</div>
 	</div>
 </section>
-
-<!-- portfolio section -->
-<div id="portfolio">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<h1 class="heading bold">PORTFOLIO</h1>
-				<h2 class="subheading">MOBILE, WEB AND BRAND IDENTITY</h2>
-				<!-- ISO section -->
-				<div class="iso-section">
-					<ul class="filter-wrapper clearfix">
-                   		 <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
-                   		 <li><a href="#" class="opc-main-bg" data-filter=".html">Html</a></li>
-                   		 <li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
-                    	 <li><a href="#" class="opc-main-bg" data-filter=".wordpress">Wordpress</a></li>
-                    	 <li><a href="#" class="opc-main-bg" data-filter=".mobile">Mobile</a></li>
-               		</ul>
-               		<div class="iso-box-section wow fadeIn" data-wow-delay="0.9s">
-               			<div class="iso-box-wrapper col4-iso-box">
-
-               				 <div class="iso-box html wordpress mobile col-lg-4 col-md-4 col-sm-6 col-xs-6">
-               				 	<a href="images/portfolio-img1.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img1.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box wordpress col-md-4 col-lg-4 col-sm-6 col-xs-6">
-               				 	<a href="images/portfolio-img2.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img2.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box html mobile col-lg-4 col-md-4 col-sm-6 col-xs-12">
-               				 	<a href="images/portfolio-img3.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img3.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6 col-xs-6">
-               				 	<a href="images/portfolio-img4.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img4.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box html photoshop col-lg-4 col-md-4 col-sm-6 col-xs-6">
-               				 	<a href="images/portfolio-img5.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img5.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box photoshop col-lg-4 col-md-4 col-sm-6 col-xs-12">
-               				 	<a href="images/portfolio-img6.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img6.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box photoshop mobile col-lg-4 col-md-4 col-sm-12 col-xs-6">
-               				 	<a href="images/portfolio-img7.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img7.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box photoshop mobile col-lg-4 col-md-4 col-sm-6 col-xs-6">
-               				 	<a href="images/portfolio-img8.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img8.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               				 <div class="iso-box wordpress mobile col-lg-4 col-md-4 col-sm-6 col-xs-12">
-               				 	<a href="images/portfolio-img9.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img9.jpg" alt="portfolio img"></a>
-               				 </div>
-
-               			</div>
-               		</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-</div>		
-
-<!-- team section -->
-<section id="team">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<h1 class="heading bold">OUR TEAM</h1>
-				<h2 class="subheading">CREATIVE TALENTS FROM WEST COAST</h2>
-			</div>
-			<div class="col-md-4 col-sm-4 col-xs-6 wow fadeIn" data-wow-delay="0.9s">
-				<div class="team-wrapper">
-					<img src="images/team1.jpg" class="img-responsive" alt="team img">
-						<div class="team-des">
-							<h4>Tracy</h4>
-							<h3>Designer</h3>
-						</div>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-4 col-xs-6 wow fadeIn" data-wow-delay="1.3s">
-				<div class="team-wrapper">
-					<img src="images/team2.jpg" class="img-responsive" alt="team img">
-						<div class="team-des">
-							<h4>Linda</h4>
-							<h3>Manager</h3>
-						</div>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-4 col-xs-6 wow fadeIn" data-wow-delay="1.6s">
-				<div class="team-wrapper">
-					<img src="images/team3.jpg" class="img-responsive" alt="team img">
-						<div class="team-des">
-							<h4>Mary</h4>
-							<h3>Developer</h3>
-						</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
+	
 <!-- contact section -->
 <section id="contact">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<h1 class="heading bold">CONTACT US</h1>
-				<h2 class="subheading">WE LOVE PRETTY MUCH TO HEAR FROM YOU</h2>
+				<h1 class="heading bold">Contact us</h1>
+				<h2 class="subheading">WE LOVE TO HEAR FROM YOU</h2>
 			</div>
 		</div>
-		<div class="row">
-			<div class="contact-info-box col-md-4 col-sm-4 col-xs-6 wow fadeInUp" data-wow-delay="0.6s">
-				<i class="fa fa-phone"></i>
-					<h3>060-040-0640</h3>
-			</div>
-			<div class="contact-info-box col-md-4 col-sm-4 col-xs-6 wow fadeInUp" data-wow-delay="0.8s">
-				<i class="fa fa-envelope-o"></i>
-					<h3>info@company.com</h3>
-			</div>
-			<div class="contact-info-box col-md-4 col-sm-4 col-xs-6 wow fadeInUp" data-wow-delay="1s">
-				<i class="fa fa-map-marker"></i>
-					<h3>San Francisco, California</h3>
-			</div>
-		</div>
+
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<form action="#" method="post">
