--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@ http://www.templatemo.com/tm-472-blaster
 	<link rel="stylesheet" href="css/style.css">
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Outfit:wght@100;200;300;400&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
+
 <!-- navigation section -->
 <section class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
@@ -73,7 +77,7 @@ http://www.templatemo.com/tm-472-blaster
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<i class=""></i>
-					<p>Welcome to our platform, your comprehensive AI development partner. We're more than machine learning experts – we assist startups and enterprises in creating AI products that <span class="und">boost efficiency</span>  and growth. 		
+					<p>Welcome to our platform, your comprehensive AI development partner. We're more than machine learning experts – we assist startups and enterprises in creating AI products that <span class="und2">boost efficiency</span>  and growth. 		
 					Guiding you every step of the way, we transform your ideas into practical solutions. We offer optimum growth AI services.</p>
 			</div>			
 
@@ -91,40 +95,32 @@ http://www.templatemo.com/tm-472-blaster
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<i class=""></i>
-					<h3>Your customers deserve a better AI chatbot</h3>
-					<p>Resolve issues instantly, increase team efficiency, and make customers happier with AI-powered chatbots and automations.</p>
+					<h3 class="und">Your <span class="und2">customers deserve</span> a better AI chatbot</h3>
+					<p>Resolve issues instantly, increase team <span class="und2">efficiency</span>, and make customers <span class="und2">happier</span> with AI-powered chatbots and automations.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
 				<i class=""></i>
-					<h3>Resolve 50% of your support questions. Instantly.</h3>
-					<p>Meet Fin, our breakthrough AI chatbot. Using the most sophisticated AI language models, Fin automatically solves customer issues with safe, accurate, conversational answers based solely on your support content.</p>
+					<h3 class="und">Resolve 50% of your support questions. <span class="und2">Instantly.</span></h3>
+					<p>Our human-friendly AI chatbot. Using the most sophisticated AI language models, XXX automatically solves customer issues with safe, accurate, conversational answers based on your support content.</p>
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class=""></i>
-					<h3>Dramatically reduce your support volume</h3>
-					<p>Fin can resolve over 50% of your customer questions instantly and accurately, so your team can focus on more high-value conversations.</p>
+					<h3 class="und">Reduce your support volume</h3>
+					<p><span class="code">Alice</span> can resolve <span class="und2">over 50%</span> of your customer questions instantly and accurately, so your team can focus on more high-value conversations.</p>
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class=""></i>
-					<h3>An AI chatbot you can trust</h3>
-					<p>Built-in safeguards ensure Fin answers questions based solely on your support content, and Fin conversations in inbox lets your team monitor all of Fin's responses.</p>
+					<h3 class="und">An AI chatbot you can trust</h3>
+					<p>Built-in safeguards ensure <span class="code">Alice</span> answers questions based solely on <span class="und2">your support content</span>, and Alice conversations in inbox lets your team <span class="und2">monitor</span> all of Alice's responses.</p>
 			</div>
-			
+					
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class=""></i>
-					<h3>Activate in minutes</h3>
-					<p>Just point it at your content—whether it’s Intercom Articles, Zendesk Help Center, or any public URL—and turn it on. No training, no configuration, no new bot paths.</p>
+					<h3 class="und">Control when you want it, human when you need it</h3>
+					<p>Enrich <span class="code">Alice</span> with Custom Answers for important questions. For everything else, Alice seamlessly <span class="und2">passes conversations</span> to your support team.</p>
 			</div>
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class=""></i>
-					<h3>Control when you want it, human when you need it</h3>
-					<p>Enrich Fin with Custom Answers for important questions. For everything else, Fin seamlessly passes conversations to your support team.</p>
-			</div>
-			
-	
 
 			<hr>
 
