--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@ http://www.templatemo.com/tm-472-blaster
 				<h1 class="heading bold">ABOUT US</h1>
 				<h2 class="subheading">EXPLORE AND NAVIGATE YOUR WAY TO SUCCESS WITH US!</h2>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+		</div>
+		<div class="row">
+			<div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
 				<i class=""></i>
 					<p>Welcome to our platform, your comprehensive AI development partner. We're more than machine learning experts – we assist startups and enterprises in creating AI products that <span class="und2">boost efficiency</span>  and growth. 		
 					Guiding you every step of the way, we transform your ideas into practical solutions. We offer optimum growth AI services.</p>
 			</div>			
-
 		</div>
 	</div>
 </section>
@@ -91,8 +92,20 @@ http://www.templatemo.com/tm-472-blaster
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
 				<h1 class="heading bold">SERVICES</h1>
-				<h2 class="subheading">cos tam asdasda </h2>
+				<h2 class="subheading">Integrate directly with</h2>
+				<div class="floating-icons">
+					<img src="images/logo-gmail.png" class="icon-7">
+					<img src="images/logo-instagram.png" class="icon-2">
+					<img src="images/logo-mailchimp.png" class="icon-3">
+					<img src="images/logo-facebook.png" class="icon-4">
+					<img src="images/logo-meta.png" class="icon-5">
+					<img src="images/logo-zapier.png" class="icon-6">
+					<img src="images/logo-open-ai.svg" class="icon-1">
+				</div>
 			</div>
+		</div>
+		
+		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<i class=""></i>
 					<h3 class="und">Your <span class="und2">customers deserve</span> a better AI chatbot</h3>
@@ -109,7 +122,9 @@ http://www.templatemo.com/tm-472-blaster
 					<h3 class="und">Reduce your support volume</h3>
 					<p><span class="code">Alice</span> can resolve <span class="und2">over 50%</span> of your customer questions instantly and accurately, so your team can focus on more high-value conversations.</p>
 			</div>
-			
+		</div>
+		
+		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class=""></i>
 					<h3 class="und">An AI chatbot you can trust</h3>
@@ -121,10 +136,8 @@ http://www.templatemo.com/tm-472-blaster
 					<h3 class="und">Control when you want it, human when you need it</h3>
 					<p>Enrich <span class="code">Alice</span> with Custom Answers for important questions. For everything else, Alice seamlessly <span class="und2">passes conversations</span> to your support team.</p>
 			</div>
-
-			<hr>
-
 		</div>
+		<hr>
 	</div>
 </section>
 	
