--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ http://www.templatemo.com/tm-472-blaster
 		<div class="row">
 			<div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
 				<i class=""></i>
-					<p>Welcome to our platform, your comprehensive AI development partner. We're more than machine learning experts – we assist startups and enterprises in creating AI products that <span class="und2">boost efficiency</span>  and growth. 		
+					<p>Welcome to our platform, your comprehensive AI development partner. We're more than machine learning experts – we assist startups and enterprises in creating AI products that boost efficiency and growth. 		
 					Guiding you every step of the way, we transform your ideas into practical solutions. We offer optimum growth AI services.</p>
 			</div>			
 		</div>
@@ -114,7 +114,7 @@ http://www.templatemo.com/tm-472-blaster
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
 				<i class=""></i>
 					<h3 class="und">Resolve 50% of your support questions. <span class="und2">Instantly.</span></h3>
-					<p>Our human-friendly AI chatbot. Using the most sophisticated AI language models, XXX automatically solves customer issues with safe, accurate, conversational answers based on your support content.</p>
+					<p>Meet <span class="code">Alice</span>, our human-friendly AI chatbot. Using the most advanced AI, <span class="code">Alice</span> automatically solves customer issues with safe, accurate, conversational answers based on your support content.</p>
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
