--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ http://www.templatemo.com/tm-472-blaster
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand"><span class="bold">Blaster</span></a>
+			<a href="#" class="navbar-brand"><div ><img src="images/logo.png" width="150"></div></a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
